--- a/.emacs.d/lsp.org
+++ b/.emacs.d/lsp.org
@@ -194,3 +194,12 @@ To install the corresponding LSP, you need to install ~yls~. Using the command ~
   :defer t
   :hook (lsp-literate-mode . lsp-deferred))
 #+end_src
+
+** Ledger
+
+Ledger is a Unix program that implements a finance tracking system or /ledger/. To implement this into emacs, you can install the ~ledger-mode~ emacs package.
+
+#+begin_src emacs-lisp
+(use-package ledger-mode
+  :mode ("\\.ledger\\'"))
+#+end_src
