--- a/.emacs.d/org.org
+++ b/.emacs.d/org.org
@@ -24,6 +24,8 @@ This installs the org package and creates a setup function to enable/disable cer
         org-export-with-toc nil
         org-export-with-section-numbers nil
         org-export-with-sub-superscripts nil
+        org-latex-src-block-backend 'listings
+        org-format-latex-options (plist-put org-format-latex-options :scale 1.3)
 
         ;; Org agenda timestamp formatting
         org-display-custom-times t
@@ -108,6 +110,17 @@ Visual fill column is a package that allows you to center text and add borders t
 (use-package visual-fill-column
   :after org
   :hook (org-mode . jm/org-mode-visual-fill))
+#+end_src
+
+** Syntax Highlighting in Latex Exports
+
+By default the syntax highlighting for latex/PDF documents exported with Emacs is pretty lackluster. To improve this, I can install the ~engrave-faces~ package.
+
+#+begin_src emacs-lisp
+(use-package engrave-faces
+  :after ox-latex
+  :config
+  (setq org-latex-src-block-backend 'engraved))
 #+end_src
 
 * Evil Org
