--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -205,6 +205,7 @@ This adds relative line numbers while excluding certain modes.
   ; Disable line numbers for certain modes
   (dolist (mode '(org-mode-hook
                   erc-mode-hook
+                  mu4e-main-mode-hook
                   term-mode-hook
                   vterm-mode-hook
                   shell-mode-hook
