--- a/.emacs.d/terminal.org
+++ b/.emacs.d/terminal.org
@@ -27,8 +27,10 @@ Multi-vterm is a package that adds the capability to easily create multiple vter
 (use-package multi-vterm
   :after vterm
   :config
-  (jm/leader-keys "v"
-    '(multi-vterm :which-key "Open vterm terminal")))
+  (jm/leader-keys
+    "vn" '(multi-vterm-next :which-key "Go to next vterm window")
+    "vp" '(multi-vterm-next :which-key "Go to previous vterm window")
+    "vc" '(multi-vterm :which-key "Create new vterm terminal")))
 #+end_src
 
 * Change Terminal Font
